--- a/.woodpecker/my-first-workflow.yaml
+++ b/.woodpecker/my-first-workflow.yaml
@@ -1,15 +1,12 @@
-pipeline:
-  # Build l'image
+steps:
   build:
     image: docker/compose
     commands:
       - docker-compose build
   
-  # Lancer les conteneurs
   deploy:
     image: docker/compose
     commands:
-      - docker-compose down
       - docker-compose up -d
     when:
       branch: main
