--- a/.woodpecker/my-first-workflow.yaml
+++ b/.woodpecker/my-first-workflow.yaml
@@ -4,15 +4,11 @@ when:
 
 steps:
   build:
-    image: docker/compose:latest
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    image: docker/compose
     commands:
       - docker-compose build
   
   deploy:
-    image: docker/compose:latest
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+    image: docker/compose
     commands:
       - docker-compose up -d
