--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,13 @@
-version: '3'
 services:
-  mon-site:
-    build: .  # Utilise le Dockerfile local
+  portfolio:
+    build: .
+    container_name: portfolio
+    networks:
+      - proxy
     ports:
       - "8080:80"
     restart: unless-stopped
+
+networks:
+  proxy:
+    external: true
