--- a/.woodpecker/my-first-workflow.yaml
+++ b/.woodpecker/my-first-workflow.yaml
@@ -4,9 +4,11 @@ when:
 
 steps:
   build:
-    image: docker:latest  # ← Utiliser docker:latest au lieu de docker/compose
+    image: docker:latest
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     commands:
-      - docker compose build  # Note: "docker compose" (avec espace) au lieu de "docker-compose"
+      - docker compose build
   
   deploy:
     image: docker:latest
