--- a/.woodpecker/my-first-workflow.yaml
+++ b/.woodpecker/my-first-workflow.yaml
@@ -9,4 +9,6 @@ steps:
       - /var/run/docker.sock:/var/run/docker.sock
     commands:
       - docker compose down --remove-orphans
-      - docker compose up -d --build
+      - docker compose build --no-cache
+      - docker compose up -d --force-recreate
+      - docker image prune -f
