--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ services:
     restart: unless-stopped
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.portfolio-http.rule=Host(`lucas-saillot.fr`)"
+      - "traefik.http.routers.portfolio-http.rule=Host(`lucassaillot.fr`)"
       - "traefik.http.routers.portfolio-http.entrypoints=web"
       - "traefik.http.routers.portfolio-http.middlewares=redirect-to-https"
-      - "traefik.http.routers.portfolio-https.rule=Host(`lucas-saillot.fr`)"
+      - "traefik.http.routers.portfolio-https.rule=Host(`lucassaillot.fr`)"
       - "traefik.http.routers.portfolio-https.entrypoints=websecure"
       - "traefik.http.routers.portfolio-https.tls=true"
       - "traefik.http.routers.portfolio-https.tls.certresolver=letsencrypt"
